# ohm

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  ohm.cfg_example
doc/: db_model.xml
migrations/initialize_schema/: down.sql  up.sql
proto/ohm/v1/: ohm_api.proto  signer.proto  signer_api.proto  wallet_api.proto
proto/ohm/v1/models/: cosigner.proto  psbt.proto  signer.proto  transaction.proto  wallet.proto
src/: config.rs  cosigner.rs  grpc.rs  lib.rs  psbt.rs  wallet.rs
src/db/: cosigner.rs  mod.rs  models.rs  psbt.rs  schema.rs  wallet.rs  xprv.rs  xpub.rs
src/grpc/: mod.rs  proto.rs  service.rs
src/wallet/: cosigner.rs  mod.rs
