[package]
name = "ohm"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
diesel = {version = "1.4.4", features = ["chrono", "sqlite"]}
prost = "0.9"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
structopt = "0.3.25"
tokio = {version = "1.14.0", features = ["rt-multi-thread"]}
tonic = "0.6"
uuid = {version = "0.8.2", features = ["v4"]}
url = {version = "2.2.2", features = ["serde"]}

[build-dependencies]
tonic-build = "0.6"
