[package]
name = "ohm"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk = "0.20.0"
chrono = "0.4"
diesel = {version = "2.0.0", features = ["chrono", "sqlite", "returning_clauses_for_sqlite_3_35"]}
email_address = "0.2.3"
prost = "0.9"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
structopt = "0.3.25"
tokio = {version = "1.14.0", features = ["rt-multi-thread"]}
tonic = "0.6"
url = {version = "2.2.2", features = ["serde"]}
uuid = {version = "0.8.2", features = ["v4"]}

[build-dependencies]
tonic-build = "0.6"
